<resources>
    <string name="app_name">Nail Saloon</string>
    <string name="cadastro_do_cliente">Client Registration:</string>
    <string name="nome">Name:</string>
    <string name="endereco">Adress:</string>
    <string name="celular">Phone/WhatsApp:</string>
    <string name="instagram">Instagram:</string>
    <string name="anamnese">Anamnesis:</string>
    <string name="possui_problema">Do you have one or more problems bellow?</string>
    <string name="micose">Fungus/Mycosis</string>
    <string name="unha_encravada">Ingrown Toenail</string>
    <string name="outro">Other</string>
    <string name="diabetes">Do you have Diabetes?</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="fumante">Do you Smoke?</string>
    <string name="nenhum">None</string>
    <string name="atividade">Do you engage in any activities that cause abrasion your nails?</string>
    <string name="qual">Which one?</string>
    <string name="possuiAlergia">Do you have any allergies to any products?</string>
    <string name="esmalte">Nail Polish</string>
    <string name="acetona">Acetone</string>
    <string name="base">Base coat</string>
    <string name="leo_secante">Drying oil</string>
    <string name="gel">Gel</string>
    <string name="limpar">Clear</string>
    <string name="salvar">Save</string>
    <string name="mancha">Stains</string>
    <string name="unha_quebradica">Brittle nails</string>
    <string name="descolamento">Detachment</string>
    <string name="o_nome_deve_ser_preenchido">Name must be filled in</string>
    <string name="informe_se_possui_ou_n_o_diabetes">Indicate whether you have diabetes or not</string>
    <string name="informe_se_o_cliente_fumante">Indicate if the client is a smoker</string>
    <string name="dados_cadastrados_com_sucesso">Data successfully registered</string>

    <string name="descricao">Description:</string>
    <string name="valor">Value:</string>
    <string name="duracao">Duration:</string>

    <string name="esmaltacao_mao">Nail Polish - Hand</string>
    <string name="esmaltacao_pe">Nail Polish - Foot</string>
    <string name="manutencao_alonga">Stretching Maintenance</string>
    <string name="o_servi_o">"The Service: "</string>
    <string name="foi_selecionado">Are Selected</string>
    <string name="adicionar">Add</string>
    <string name="sobre">About</string>
    <string name="autor">Author: Edson Vieira da Silva</string>
    <string name="cadastro_de_servicos">Register a New Service:</string>
    <string name="preco">Price:</string>
    <string name="a_descricao_nao_pode_ser_vazia">The description cannot be empty.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mes">Month</string>
    <string name="semana">Week</string>
    <string name="dia">Day</string>
    <string name="cliente">Clients</string>
    <string name="servicos">Services</string>
    <string name="clientes">Clients</string>
    <string name="alterar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="lista_de_servicos">List of Services</string>
    <string name="cancelar">Cancel</string>
    <string name="preco_do_servico">Service Price</string>
    <string name="duracao_do_servico">Service Duration</string>
    <string name="editar">Edit</string>
    <string name="oleo_secante">Drying Oil</string>
    <string name="detalhes_do_cliente">Customer Details</string>
    <string name="possui_problema_preexistente">Has a pre-existing nail problem?</string>
    <string name="possui_micose_ou_fungo">Has Mycosis or Fungus?</string>
    <string name="possui_manchas_nas_unhas">Has nail stains?</string>
    <string name="possui_unhas_quebradicas">Has brittle nails?</string>
    <string name="possui_descolamento_unha">Has nail detachmment?</string>
    <string name="possui_diabetes">Has Diabetes?</string>
    <string name="aviso">Warning</string>
    <string name="ok">Ok</string>
    <string name="erro">Error</string>
    <string name="confirmacao">Confirmation</string>
    <string name="erro_ao_inserir_o_servico_no_banco">Error inserting the Service in database</string>
    <string name="erro_ao_atualizar_servico_no_banco">Error updating the Service in database</string>
    <string name="deseja_realmente_excluir">"Do you really want to delete? "</string>
    <string name="erro_ao_tentar_apagar">Error trying to delete</string>
    <string name="ordenacao">Sorting</string>
    <string name="todos_os_campos_foram_limpos">All Fields Have Been Cleared!</string>
    <string name="o_endere_o_deve_ser_preenchido">The Adress must be filled in</string>
    <string name="o_celular_deve_ser_preenchido">The phone must be filled in</string>
    <string name="informe_se_o_cliente_realiza_alguma_atividade">ndicate if the client engages in any activity</string>
    <string name="esmaltacao_decor_mao">Nail Polish With Decoration- Hand</string>
    <string name="esmaltacao_decor_pe">Nail Polish With Decoration- Foot</string>
    <string name="alongamento_gel">Stretching - Gel</string>
    <string name="alongamento_fibra">Stretching - Fiber Glass</string>
    <string name="blindagem">Shielding</string>
    <string name="spa_pes">Foot Care</string>
    <string name="curso">Course: Java Development for Mobile Devices</string>
    <string name="descricao_app">Application developed for managing a nail salon, facilitating scheduling appointments, registering customers and services.</string>
    <string name="email_edson">Email: edson.2012@alunos.utfpr.edu.br</string>
    <string name="o_pre_o_n_o_pode_ser_vazio">The price cannot be empty</string>
    <string name="a_duracao_nao_pode_ser_vazio">the duration cannot be empty</string>
    <string name="agendar_novo">New Schedule</string>
    <string name="editar_um_servico">Edit a Service:</string>
    <string name="descricao_do_servico">Service description</string>
    <string name="tratamento_diferenciado">Require a different treatment?:</string>
    <string name="possui_unha_encravada">Has an ingrown toenail?</string>
    <string name="realiza_atividade">Activity that causes friction on the nails</string>
    <string name="produto_alergenico">Allergenic product:</string>
    <string name="servico_cadastrado_com_sucesso">Service successfully registered!</string>
    <string name="novo_servico">New Service</string>
    <string name="editarservico">Edit Service</string>

</resources>