<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/perfil"
        android:title="@string/cliente"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/servico_tecnico"
        android:title="@string/servicos"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/sobre" />
</menu>