<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".CadastroDeClienteActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewCadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/cadastro_do_cliente"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/nome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCadastro" />

            <EditText
                android:id="@+id/editTexNome"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="text|textCapWords"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNome" />

            <TextView
                android:id="@+id/textViewEndereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/endereco"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTexNome" />

            <EditText
                android:id="@+id/editTextEndereco"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="text|textCapWords"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEndereco" />

            <TextView
                android:id="@+id/textViewCelular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/celular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEndereco" />

            <EditText
                android:id="@+id/editTextCelular"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCelular" />

            <TextView
                android:id="@+id/textViewInstagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/instagram"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextCelular" />

            <EditText
                android:id="@+id/editTextInstagram"
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="text"
                android:text="\@"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewInstagram" />

            <TextView
                android:id="@+id/textViewAnamnese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/anamnese"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextInstagram" />

            <TextView
                android:id="@+id/textViewPossuiProblema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/possui_problema"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAnamnese" />

            <TextView
                android:id="@+id/textViewPossuiDiabetes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/diabetes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxUmhasQuebradica" />

            <TextView
                android:id="@+id/textViewFumante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/fumante"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPossuiDiabetes" />

            <TextView
                android:id="@+id/textViewAtividade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/atividade"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupFumante" />

            <TextView
                android:id="@+id/textViewAlergia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/possuiAlergia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupAtividade" />

            <Spinner
                android:id="@+id/spinnerProduto"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAlergia" />

            <CheckBox
                android:id="@+id/checkBoxMicose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/micose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPossuiProblema" />

            <CheckBox
                android:id="@+id/checkBoxUnhaEncravada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/unha_encravada"
                app:layout_constraintStart_toEndOf="@+id/checkBoxMicose"
                app:layout_constraintTop_toBottomOf="@+id/textViewPossuiProblema" />

            <CheckBox
                android:id="@+id/checkBoxMancha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/mancha"
                app:layout_constraintStart_toEndOf="@+id/checkBoxUnhaEncravada"
                app:layout_constraintTop_toBottomOf="@+id/textViewPossuiProblema" />

            <CheckBox
                android:id="@+id/checkBoxUmhasQuebradica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/unha_quebradica"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxMicose" />

            <CheckBox
                android:id="@+id/checkBoxDescolamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/descolamento"
                app:layout_constraintStart_toEndOf="@+id/checkBoxUmhasQuebradica"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxUnhaEncravada" />

            <RadioGroup
                android:id="@+id/radioGroupDiabetes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/textViewPossuiDiabetes"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxDescolamento">

                <RadioButton
                    android:id="@+id/radioButtonSimDiabetes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="10dp"
                    android:text="@string/sim" />

                <RadioButton
                    android:id="@+id/radioButtonNaoDiabetes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nao" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupFumante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/textViewFumante"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupDiabetes">

                <RadioButton
                    android:id="@+id/radioButtonSimFumante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="10dp"
                    android:text="@string/sim" />

                <RadioButton
                    android:id="@+id/radioButtonNaoFumante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nao" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupAtividade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAtividade">

                <RadioButton
                    android:id="@+id/radioButtonSimRealizaAtividade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="10dp"
                    android:text="@string/sim" />

                <RadioButton
                    android:id="@+id/radioButtonNaoRealizaAtividade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nao" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>

</ScrollView>